# rustchess2

./: Cargo.toml  README.md  todo.txt
engine/: Cargo.toml
engine/src/: lib.rs  search.rs
engine/src/eval/: mod.rs  piecetables.rs
frontend/: Cargo.toml
frontend/src/: main.rs
frontend/static/: index.html
frontend/static/css/: style.css
frontend/static/js/: index.js
game/src/: genkeys.rs  lib.rs  precomputed.rs  rand.rs
genmagics/: Cargo.toml
genmagics/src/: lib.rs  main.rs
movegen/: Cargo.toml  build.rs
movegen/src/: lib.rs  magics.rs  perft.rs  san.rs
src/: lib.rs  main.rs  tests.rs  uci.rs
src/engine/: eval.rs  mod.rs  search.rs
src/engine/eval/: mod.rs
src/game/: genkeys.rs  mod.rs  movegen.rs  perft.rs  san.rs
