workspace = { members = [ "engine", "game","genmagics", "movegen"] }
[package]
name = "rustchess2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game = {path = "./game"}
engine = {path = "./engine"}
movegen = {path = "./movegen"}

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
